replica de la página de coca-cola

--- a/replica_cocacola/index.html
+++ b/replica_cocacola/index.html
@@ -24,20 +24,43 @@
           </div>
           <div>
             <ul class="navegacion-lista">
-              <li class="marcas">
+              <li class="marcas subrayado">
                 <a href="https://www.coca-cola.com/ar/es/brands">Marcas</a>
               </li>
-              <li class="descubri">Descubrí</li>
-              <li class="impacto">Impacto</li>
-              <li class="comprar">Comprar</li>
+              <li class="desplegable subrayado">
+                <a href="#">Descubrí</a>
+                <ul class="sub-lista">
+                  <li><a href="">Compartí una Coca‑Cola</a></li>
+                  <li><a href="">Juntos en Todas</a></li>
+                  <li><a href="">Coke Studio</a></li>
+                  <li><a href="">The Athletes Code</a></li>
+                </ul>
+              </li>
+              <li class="desplegable subrayado">
+                <a href="#">Impacto</a>
+                <ul class="sub-lista">
+                  <li><a href="">Sustentabilidad</a></li>
+                  <li><a href="">Social</a></li>
+                </ul>
+              </li>
+              <li class="desplegable subrayado">
+                <a href="#">Comprar</a>
+                <ul class="sub-lista">
+                  <li><a href="">Coca‑Cola en tu casa (CABA y GBA)</a></li>
+                  <li><a href="">Coca‑Cola en tu casa (CORDOBA)</a></li>
+                  <li><a href="">Tiendas</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
           <div class="login">
-            <img
-              src="./images/usuario.png"
-              alt="logo de usuario"
-              width="20px"
-            />
+            <div class="login-image-container subrayado">
+              <img
+                src="./images/usuario.png"
+                alt="logo de usuario"
+                width="20px"
+              />
+            </div>
           </div>
         </nav>
       </div>
