replica de la página de coca-cola

--- a/replica_cocacola/index.html
+++ b/replica_cocacola/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/header.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link
       rel="shortcut icon"
       href="https://cdn-icons-png.flaticon.com/128/16183/16183588.png"
@@ -66,20 +68,42 @@
       </div>
     </header>
     <main>
-      <nav class="banner">
-        <div
-          class="banner-item"
-          style="background-image: url(./images/image-banner1.webp)"
-        ></div>
-        <div
-          class="banner-item"
-          style="background-image: url(./images/image-banner2.webp)"
-        ></div>
-        <div
-          class="banner-item"
-          style="background-image: url(./images/image-banner3.webp)"
-        ></div>
-      </nav>
+      <div class="banner-container">
+        <nav class="banner">
+          <a href="#">
+            <div
+              class="banner-item"
+              style="background-image: url(./images/image-banner1.webp)"
+            ></div>
+          </a>
+          <div
+            class="banner-item"
+            style="background-image: url(./images/image-banner2.webp)"
+          >
+            <div class="banner-content">
+              <h3>Viví el Lollapalooza Argentina</h3>
+              <p>
+                Sentí la música del Lollapalooza con el contenido exclusivo de
+                Coke Studio.
+              </p>
+              <a href="#" class="banner-button">
+                <span>Explorar</span>
+              </a>
+            </div>
+          </div>
+          <div
+            class="banner-item"
+            style="background-image: url(./images/image-banner3.webp)"
+          >
+            <div class="banner-content">
+              <h3>The Athletes Code</h3>
+              <a href="#" class="banner-button">
+                <span>Conocer más</span>
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
       <section>
         <h2>¿Qué hay de nuevo</h2>
         <div>
