--- a/replica-figma/index.html
+++ b/replica-figma/index.html
@@ -15,11 +15,41 @@
       </button>
     </header>
     <main>
-      <section class="section-contact">
+      <section class="color-section">
         <h2>Transformamos ideas en soluciones digitales</h2>
-        <button class="secondary-button">Contáctenos</button>
+        <button class="secondary-button">
+          <a href="./pages/contact.html">Contáctenos</a>
+        </button>
+      </section>
+      <section class="service-container">
+        <h2>Nuestros Servicios</h2>
+        <article class="service-card">
+          <h3>Marketing Digital</h3>
+          <p>Estrategias efectivas para posicionar tu marca.</p>
+          <button class="tertiary-button">
+            <a href="./pages/marketing.html">Ver más</a>
+          </button>
+        </article>
+        <article class="service-card">
+          <h3>Diseño Gráfico</h3>
+          <p>Comunicación visual con impacto.</p>
+          <button class="tertiary-button">Ver más</button>
+        </article>
+        <article class="service-card">
+          <h3>Desarrollo Web</h3>
+          <p>Sitios a medida optimizados para resultados.</p>
+          <button class="tertiary-button">Ver más</button>
+        </article>
+      </section>
+      <section>
+        <h2>Empresas que confían en nosotros</h2>
+        <article class="company-container">
+          <div class="company"></div>
+          <div class="company"></div>
+          <div class="company"></div>
+          <div class="company"></div>
+        </article>
       </section>
     </main>
-    <footer></footer>
   </body>
 </html>
