--- a/replica-figma/index.html
+++ b/replica-figma/index.html
@@ -8,48 +8,69 @@
   </head>
   <body>
     <header>
-      <div class="logo"></div>
-      <button class="menu">
-        <span class="menu-line"></span><span class="menu-line"></span
-        ><span class="menu-line"></span>
-      </button>
+      <div class="header-content">
+        <div class="logo"></div>
+        <ul class="nav-list">
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./pages/marketing.html">Marketing</a></li>
+          <li><a href="./pages/design.html">Diseño</a></li>
+          <li><a href="./pages/web-development.html">Web</a></li>
+          <li><a href="./pages/contact.html">Contacto</a></li>
+        </ul>
+        <button class="menu">
+          <span class="menu-line"></span><span class="menu-line"></span
+          ><span class="menu-line"></span>
+          <ul class="sub-list">
+            <li><a href="./index.html">Inicio</a></li>
+            <li><a href="./pages/marketing.html">Marketing</a></li>
+            <li><a href="">Diseño</a></li>
+            <li><a href="./pages/web-development.html">Web</a></li>
+            <li><a href="./pages/contact.html">Contacto</a></li>
+          </ul>
+        </button>
+      </div>
     </header>
     <main>
-      <section class="color-section">
-        <h2>Transformamos ideas en soluciones digitales</h2>
-        <button class="secondary-button">
-          <a href="./pages/contact.html">Contáctenos</a>
-        </button>
-      </section>
-      <section class="service-container">
-        <h2>Nuestros Servicios</h2>
-        <article class="service-card">
-          <h3>Marketing Digital</h3>
-          <p>Estrategias efectivas para posicionar tu marca.</p>
-          <button class="tertiary-button">
-            <a href="./pages/marketing.html">Ver más</a>
+      <div class="hero-container">
+        <section class="primary-color-section">
+          <h2>Transformamos ideas en soluciones digitales</h2>
+          <button class="secondary-button">
+            <a href="./pages/contact.html">Contáctenos</a>
           </button>
-        </article>
-        <article class="service-card">
-          <h3>Diseño Gráfico</h3>
-          <p>Comunicación visual con impacto.</p>
-          <button class="tertiary-button">Ver más</button>
-        </article>
-        <article class="service-card">
-          <h3>Desarrollo Web</h3>
-          <p>Sitios a medida optimizados para resultados.</p>
-          <button class="tertiary-button">Ver más</button>
-        </article>
-      </section>
-      <section>
+        </section>
+        <section class="hero-image">
+          <p>Imagen Hero</p>
+        </section>
+      </div>
+      <div class="main-content">
+        <h2>Nuestros Servicios</h2>
+        <section class="service-container">
+          <article class="service-card">
+            <h3>Marketing Digital</h3>
+            <p>Estrategias efectivas para posicionar tu marca.</p>
+            <button class="tertiary-button">
+              <a href="./pages/marketing.html">Ver más</a>
+            </button>
+          </article>
+          <article class="service-card">
+            <h3>Diseño Gráfico</h3>
+            <p>Comunicación visual con impacto.</p>
+            <button class="tertiary-button">Ver más</button>
+          </article>
+          <article class="service-card">
+            <h3>Desarrollo Web</h3>
+            <p>Sitios a medida optimizados para resultados.</p>
+            <button class="tertiary-button">Ver más</button>
+          </article>
+        </section>
         <h2>Empresas que confían en nosotros</h2>
-        <article class="company-container">
+        <section class="company-container">
           <div class="company"></div>
           <div class="company"></div>
           <div class="company"></div>
           <div class="company"></div>
-        </article>
-      </section>
+        </section>
+      </div>
     </main>
   </body>
 </html>
