--- a/replica-figma/pages/design.html
+++ b/replica-figma/pages/design.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./../css/globals.css" />
-    <title>Marketing</title>
+    <title>Diseño Gráfico</title>
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
           <ul class="sub-list">
             <li><a href="./../index.html">Inicio</a></li>
             <li><a href="./marketing.html">Marketing</a></li>
-            <li><a href="">Diseño</a></li>
+            <li><a href="./design.html">Diseño</a></li>
             <li><a href="./web-development.html">Web</a></li>
             <li><a href="./contact.html">Contacto</a></li>
           </ul>
@@ -32,7 +32,7 @@
     </header>
     <main>
       <section class="secondary-color-section">
-        <h2>Marketing Digital</h2>
+        <h2>Diseño Gráfico</h2>
       </section>
       <div class="container-media-query">
         <aside class="aside-content">
@@ -40,11 +40,11 @@
           <section class="team-section">
             <article class="teammate">
               <div class="avatar"></div>
-              <p>Ana</p>
+              <p>Pedro</p>
             </article>
             <article class="teammate">
               <div class="avatar"></div>
-              <p>Carlos</p>
+              <p>Juan</p>
             </article>
             <article class="teammate">
               <div class="avatar"></div>
@@ -55,23 +55,23 @@
         <div class="main-content">
           <section class="text-section">
             <p>
-              Potenciamos tu presencia online con estrategias eficaces de
-              marketing digital que aumentan la visibilidad de tu marca y
-              generan más conversiones.
+              Creamos diseños visuales impactantes que comunican la identidad de
+              tu marca y captan la atención de tu audiencia de forma efectiva y
+              profesional.
             </p>
           </section>
           <h2>Beneficios</h2>
           <section class="benefits-section">
-            <div class="benefits">Mayor visibilidad online</div>
-            <div class="benefits">Aumento de conversiones</div>
-            <div class="benefits">Engagement con tu audiencia</div>
+            <div class="benefits">Imagen de marca coherente</div>
+            <div class="benefits">Mayor impacto visual</div>
+            <div class="benefits">Mejor comunicación gráfica</div>
           </section>
-          <h2>Tecnologías</h2>
+          <h2>Herramientas que usamos</h2>
           <section class="technologies-section">
-            <div class="technologies">Google Ads</div>
-            <div class="technologies">Meta Ads</div>
-            <div class="technologies">Analytics</div>
-            <div class="technologies">HubSpot</div>
+            <div class="technologies">Adobe Photoshop</div>
+            <div class="technologies">Illustrator</div>
+            <div class="technologies">Figma</div>
+            <div class="technologies">Canva</div>
           </section>
           <button class="primary-button">
             <a href="./contact.html">Solicitar servicio</a>
