--- a/replica-figma/pages/web-development.html
+++ b/replica-figma/pages/web-development.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./../css/globals.css" />
-    <title>Marketing</title>
+    <title>Desarrollo Web</title>
   </head>
   <body>
     <header>
@@ -32,7 +32,7 @@
     </header>
     <main>
       <section class="secondary-color-section">
-        <h2>Marketing Digital</h2>
+        <h2>Desarrollo Web</h2>
       </section>
       <div class="container-media-query">
         <aside class="aside-content">
@@ -40,7 +40,7 @@
           <section class="team-section">
             <article class="teammate">
               <div class="avatar"></div>
-              <p>Ana</p>
+              <p>María</p>
             </article>
             <article class="teammate">
               <div class="avatar"></div>
@@ -48,30 +48,32 @@
             </article>
             <article class="teammate">
               <div class="avatar"></div>
-              <p>Marta</p>
+              <p>Julián</p>
             </article>
           </section>
         </aside>
         <div class="main-content">
           <section class="text-section">
             <p>
-              Potenciamos tu presencia online con estrategias eficaces de
-              marketing digital que aumentan la visibilidad de tu marca y
-              generan más conversiones.
+              Construimos sitios y aplicaciones web de alto rendimiento que
+              impulsan tu negocio y ofrecen experiencias de usuario
+              excepcionales. Nuestro equipo domina las mejores prácticas
+              modernas y las adapta a tus objetivos.
             </p>
           </section>
           <h2>Beneficios</h2>
           <section class="benefits-section">
-            <div class="benefits">Mayor visibilidad online</div>
-            <div class="benefits">Aumento de conversiones</div>
-            <div class="benefits">Engagement con tu audiencia</div>
+            <div class="benefits">Arquitectura escalable</div>
+            <div class="benefits">SEO y rendimiento óptimos</div>
+            <div class="benefits">Experiencia de usuario fluida</div>
           </section>
           <h2>Tecnologías</h2>
           <section class="technologies-section">
-            <div class="technologies">Google Ads</div>
-            <div class="technologies">Meta Ads</div>
-            <div class="technologies">Analytics</div>
-            <div class="technologies">HubSpot</div>
+            <div class="technologies">React</div>
+            <div class="technologies">Next.js</div>
+            <div class="technologies">Node.js</div>
+            <div class="technologies">Supabase</div>
+            <div class="technologies">Tailwind</div>
           </section>
           <button class="primary-button">
             <a href="./contact.html">Solicitar servicio</a>
