introduccion de react

--- a/react/intro/index.html
+++ b/react/intro/index.html
@@ -107,7 +107,8 @@
             {nombres.map((nombre, i) => {
               return (
                 <Bienvenida key={nombre + i} nombre={nombre}>
-                  <i>Soy un hijo</i> // puede ser cualquier cosa
+                  <i>Soy un hijo</i>
+                  // puede ser cualquier cosa
                 </Bienvenida>
               );
             })}
